--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="container">
-  Main app
+  <div *ngFor="let item of items | async">
+  	{{item.name}}
+  </div> 
+  Item comes here
 </div>
