ng service & model talkig to firebase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<div class="container">
-  <div *ngFor="let item of items | async">
-  	{{item.name}}
-  </div> 
-  Item comes here
+<div *ngFor="let business of businesses">
+	{{business.company}}
 </div>
