--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,3 +10,45 @@ tr td button {
 	margin-left: 25px;
 	margin-right: 25px;
 }
+
+.businesscard {
+	max-width: 450px;
+	min-height: 200px;
+	background-color: #E6E6E6;
+	border: 1px solid #000;
+	font-family: Times new roman;
+	font-size: 14px;
+	padding-left: 10px;
+	padding-top:10px;
+	line-height: 20px;
+}
+
+.businessdescription {
+	max-width: 700px;
+	text-align: justify;
+	margin-top: 30px;
+}
+
+.card-head{
+	font-size: 18px;
+	font-weight: bold;
+	margin-top: 30px;
+}
+
+.card-left{
+	max-width: 180px;
+	margin-right:20px;
+	float:left;
+}
+
+.card-right{
+	max-width: 200px;
+	margin-right:20px;
+	float:right;
+}
+
+.separator {
+	height: 5px;
+	border-bottom:1px solid #000;
+	clear: both;
+}
